add vm stdout in asmlogger